# yumI

./: .gitignore  Cargo.toml  README.md  env.sample  watch_client.sh  watch_server.sh
src/: error.rs  lib.rs  main.rs  model.rs
src/apis/: package.rs
src/token/: mod.rs  web_token.rs
src/web/: mod.rs  routes_login.rs
src/yumdb/: mod.rs  packagedb.rs  users.rs
static/: test.txt
tests/: quick_dev.rs
